[project]
name = "langchain-framework-ps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.111.0",
    "black>=26.5.1",
    "isort>=8.0.1",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.7",
    "langchain-core>=1.4.8",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.3",
    "langsmith>=0.9.0",
    "python-dotenv>=1.2.2",
]
